@@ -50,6 +50,8 @@ Build system
 Fixed bugs
 ----------
 
+- Fixed overflow in inference information of cumulative constraint handler
+
 Miscellaneous
 -------------
 
